--- a/index.html
+++ b/index.html
@@ -1,54 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#002433">
-    <title>Rhythm Mind | Music player</title>
-  </head>
-  <style>
-      #root {
-      background: url('./bg_image.jpg') center center;
-      position: absolute;
-      bottom: 0;
-      top: 0;
-      left: 0;
-      right: 0;
-      background-size: cover;
-      text-align: center;
-      }
-      #logo {
-      width: 40%;
-      }
-    @media only screen and (max-width: 1200px) {
-      #logo {
-          width: 50%;
-      }
-    }
-    @media only screen and (max-width: 980px) {
-      #logo {
-          width: 60%;
-      }
-    }
-    @media only screen and (max-width: 850px) {
-      #logo {
-          width: 70%;
-      }
-    }
-    @media only screen and (max-width: 700px) {
-      #logo {
-          width: 90%;
-      }
-    }
-    @media only screen and (max-width: 700px) {
-      #logo {
-          width: 100%;
-      }
-    }
-  </style>
-  <body>
-    <div id="root">
-      <img id="logo" src="./website.png">
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/static/media/ico.8c7b692a.png"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta name="theme-color" content="#002433"><title>Rhythm Mind | Music Player to relax and increase productivity</title><link href="/static/css/main.cf67ee4d.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/static/js/main.1dfd1f5f.js"></script></body></html>
